kubernetes/archive/deploy/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: jellyseerr
spec:
  rules:
  - host: jellyseerr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: jellyseerr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
